--- a/mycore-0.9.conf
+++ b/mycore-0.9.conf
@@ -1,4 +1,4 @@
-core;/root/scripts/owncloud7.0.2
+core;https://github.com/owncloud/core;v7.0.2
 app;https://github.com/owncloud/activity;v7.0.2
 app;http://apps.owncloud.com/CONTENT/content-files/157439-files_antivirus.tar.gz
 app;https://github.com/ppaysant/dashboard;master
