--- a/mycore-0.9.conf
+++ b/mycore-0.9.conf
@@ -10,6 +10,6 @@ app;https://github.com/marcdexet-cnrs/user_servervars2;master
 app;https://github.com/marcdexet-cnrs/user_mailinglist;master
 app;https://github.com/CNRS-DSI-Dev/user_account_actions;master
 app;https://github.com/owncloud/firstrunwizard;v7.0.2
-theme;https://github.com/sodetemplin/mycore;master
+theme;https://github.com/CNRS-DSI-Dev/mycore;master
 script;/root/scripts/patch_core.sh
 script;/root/scripts/patch_user_servervars.sh
