--- a/mycore-1.1.5.conf
+++ b/mycore-1.1.5.conf
@@ -1,7 +1,7 @@
 core;https://github.com/owncloud/core;v7.0.3
 app;https://github.com/owncloud/activity;v7.0.3
 app;http://apps.owncloud.com/CONTENT/content-files/157439-files_antivirus.tar.gz
-app;https://github.com/CNRS-DSI-Dev/dashboard;master
+app;https://github.com/CNRS-DSI-Dev/dashboard;stable7
 app;https://github.com/CNRS-DSI-Dev/lotsofgroups;master
 app;https://github.com/CNRS-DSI-Dev/group_custom;master
 app;https://github.com/CNRS-DSI-Dev/password_policy;master
