Test : check phpunit

--- a/test-mycore.conf
+++ b/test-mycore.conf
@@ -10,4 +10,6 @@
             <directory>apps/user_servervars2/tests/service/</directory>
         </testsuite>
     </testsuites>
+
+    <log type="junit" target="../logs/junit.xml" logIncompleteSkipped="false"/>
 </phpunit>
