Tests: add junit-style logs

--- a/test-mycore.conf
+++ b/test-mycore.conf
@@ -11,5 +11,7 @@
         </testsuite>
     </testsuites>
 
-    <log type="junit" target="../logs/junit.xml" logIncompleteSkipped="false"/>
+    <logging>
+        <log type="junit" target="../logs/junit.xml" logIncompleteSkipped="false"/>
+    </logging>
 </phpunit>
