--- a/mycore-1.2.1.0.conf
+++ b/mycore-1.2.1.0.conf
@@ -15,6 +15,7 @@ app;https://github.com/owncloud/files_pdfviewer;v7.0.5
 app;https://github.com/CNRS-DSI-Dev/user_set_password;master
 app;https://github.com/CNRS-DSI-Dev/user_files_restore;master
 app;https://github.com/owncloud/gallery;stable7
+subapp;https://github.com/owncloud/apps;stable7;files_videoviewer
 theme;https://github.com/CNRS-DSI-Dev/mycore;master
 wayf;https://github.com/CNRS-DSI-Dev/mycore_wayf;master
 script;/root/scripts/mycore_build/patch_core.sh
